Made a more valid html5 page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<html><title>Centres</title><body>Centres</body></html>
+<!DOCTYPE html>
+<html>
+
+  <head>
+    <title>Centres</title>
+  </head>
+
+  <body>
+    <h1>Centres</h1>
+    <p>Stereocenter Perception</p>
+  </body>
+  
+</html>
